# OxcFuzzParser

./: .gitignore  Cargo.toml  DEPENDENTS.md  README.md  fuzz.js  main.js  package.json
.github/: dependabot.yml
.github/workflows/: Rust.yml
Documentation/: index.html  modules.html
Source/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser.rs  regex.rs
