[[bin]]
doctest = false
name = "parser"
path = "fuzz_targets/parser.rs"
test = false

[[bin]]
doctest = false
name = "regex"
path = "fuzz_targets/regex.rs"
test = false

[dependencies]
libfuzzer-sys = "0.4.9"
oxc = "0.48.1"
oxc_regular_expression = "0.48.1"

[package]
edition = "2021"
name = "oxc_fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]
