[[bin]]
doctest = false
name = "parser"
path = "fuzz_targets/parser.rs"
test = false

[[bin]]
doctest = false
name = "regex"
path = "fuzz_targets/regex.rs"
test = false

[dependencies]
libfuzzer-sys = "0.4.9"
oxc = "0.51.0"
oxc_regular_expression = "0.51.0"

[package]
edition = "2024"
name = "oxc_fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]
